--- a/gsxx.html
+++ b/gsxx.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>公司信息</title><!--名字-->
-    <link rel="stylesheet" href="public.css">  <!--引用样式 -->
-    <link rel="stylesheet" href= "gsxxstyle.css">  <!--引用样式 会覆盖所以要注意顺序-->
+    <link rel="stylesheet" href="./css/public.css">  <!--引用样式 -->
+        <link rel="stylesheet" href= "./css/gsxxstyle.css">  <!--引用样式 会覆盖所以要注意顺序-->
     <script type="text/javascript" src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/nav.js"></script>
 </head>
