--- a/zanzhu.html
+++ b/zanzhu.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>digitalcity</title>
     <!--名字-->
-    <link rel="stylesheet" href="public.css">
-    <!--引用样式 -->
-    <link rel="stylesheet" href="zzstyle.css" type="text/css">
+    <link rel="stylesheet" href="./css/public.css">  <!--引用样式 -->
+        <!--引用样式 -->
+    <link rel="stylesheet" href="./css/zzstyle.css" type="text/css">
     <!--引用样式 会覆盖所以要注意顺序-->
     <script type="text/javascript" src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/nav.js"></script>
